# momentum-universe

./: .env.example  .gitignore  .mcp.json  DISCLAIMER.md  README.md  config.yaml  llms.txt  market-metadata.json  nightlog.md  pyproject.toml  start.sh  stock-renames.json  stock-sectors.json  stock-universe.json
config/: indices.yml
data/: state.json
examples/: custom_strategy.py  explore_universe.py
fortress/: __init__.py  __main__.py  auth.py  backtest.py  cache.py  cli.py  config.py  defensive.py  indicators.py  instruments.py  market_data.py  mcp_server.py  momentum_engine.py  nse_data_loader.py  plan_render.py  portfolio.py  rebalance_logic.py  rebalance_planner.py  risk_governor.py  ryner_backtest_wrapper.py  universe.py  utils.py
nse_universe/: __init__.py  paths.py  sectors.py
scripts/: backfill.py
tests/: __init__.py  test_actions.py  test_agile_regime.py  test_backtest.py  test_build_renames.py  test_defensive.py  test_emerging_momentum.py  test_emerging_scan.py  test_indicators.py  test_mcp_server.py  test_nse_data_loader.py  test_plan_render.py  test_portfolio.py  test_rebalance_planner.py  test_regime_switched.py  test_risk_governor.py  test_ryner_pullback.py  test_sectors.py  test_strategy.py  test_swing_allocation.py  test_swing_bakeoff.py  test_trigger_check.py  test_universe.py  test_universe_v2_loader.py
tools/: build_benchmark.py  build_renames.py  build_sectors.py  build_vix.py  check_position_sizes.py  high_base_scan.py  lookback_window_backtest.py  reconcile_state.py  reparse_sweep_logs.py  ryner_backtest.py  ryner_pullback_scan.py  ryner_regime.py  (+2 more)
(+7198 files in other folders)
